WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
278543
[IFC][Integration] Broken ad elements on cnn.com
https://bugs.webkit.org/show_bug.cgi?id=278543
Summary
[IFC][Integration] Broken ad elements on cnn.com
alan
Reported
2024-08-22 14:47:55 PDT
<
rdar://134383150
>
Attachments
[fast-cq]Patch
(3.64 KB, patch)
2024-08-22 14:49 PDT
,
alan
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
alan
Comment 1
2024-08-22 14:49:42 PDT
Created
attachment 472271
[details]
[fast-cq]Patch
EWS
Comment 2
2024-08-23 05:19:43 PDT
Committed
282654@main
(e576d349069d): <
https://commits.webkit.org/282654@main
> All reviewed patches have been landed. Closing bug and clearing flags on
attachment 472271
[details]
.
alan
Comment 3
2024-08-27 07:01:12 PDT
***
Bug 278720
has been marked as a duplicate of this bug. ***
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug