[IFC][Integration] Broken ad elements on cnn.com https://bugs.webkit.org/show_bug.cgi?id=278543 <rdar://134383150>

Reviewed by Antti Koivisto.

Intrinsic width codepath (preferred width computation) is not supposed to run _layout_ code.

* LayoutTests/fast/inline-block/nested-inline-block-with-fixed-width-expected.html: Added.
* LayoutTests/fast/inline-block/nested-inline-block-with-fixed-width.html: Added.
* Source/WebCore/layout/formattingContexts/inline/InlineLineBuilder.cpp:
(WebCore::Layout::LineBuilder::candidateContentForLine):

Canonical link: https://commits.webkit.org/282654@main